[package]
name = "rircd_irc_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0" , features = [ "full" ] }
color-eyre = "0.6.0"
futures = "0.3.19"
async-trait = "0.1.52"
# I mean why reinvent the wheel
ellidri-tokens = "0.1.0"
tokio-test = "0.4.2"
derive-new = "0.5.9"
